--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.9.7",
     "socket.io": "^1.1.0",
     "node-static": "^0.7.6",
-    "debug": "^2.0.0"
+    "debug": "^2.0.0",
+    "domain": "0.0.0"
   },
   "repository": {
     "type": "git",
