--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "socket.io": "^1.1.0",
     "node-static": "^0.7.6",
     "debug": "^2.0.0",
-    "domain": "0.0.0"
+    "domain": "0.0.0",
+    "forever-monitor": "^1.3.0"
   },
   "repository": {
     "type": "git",
