--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node-static": "^0.7.6",
     "debug": "^2.0.0",
     "domain": "0.0.0",
-    "forever-monitor": "^1.3.0"
+    "forever-monitor": "^1.3.0",
+    "mocha": "^1.21.5"
   },
   "repository": {
     "type": "git",
