--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "forever-monitor": "*",
     "mocha": "^2.0.1",
     "node-static": "*",
-    "socket.io": "*"
+    "socket.io": "*",
+    "socket.io-client": "^1.2.0"
   },
   "repository": {
     "type": "git",
